# bing-pong

./: .gitignore  CMakeLists.txt
shaders/: default.frag
src/: engine.h  game.h  main.c
src/engine/: CMakeLists.txt  engine.c  engine_array_list.c  engine_io.c  engine_render.c  engine_time.c
src/game/: CMakeLists.txt  game.c  game_apple.c  game_board.c  game_internal.h  game_snake.c
src/snek/: CMakeLists.txt  game.h  global_variables.c  global_variables.h  input.h  io.h  render.h  time.h  types.h  util.h
src/snek/game/: CMakeLists.txt  game.c
src/snek/io/: CMakeLists.txt  io.c
src/snek/render/: CMakeLists.txt  render.c  render_init.c  render_internal.h
src/snek/time/: CMakeLists.txt  time.c
